fullSandbox11072023/force-app/main/default/objects/Contact/fields/A_R_Notes__c.field-meta.xml
<CustomField>
    <fullName>A_R_Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>