fullSandbox11072023/force-app/main/default/objects/Contact/fields/Account_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Org__c</fullName>
    <formula>Account.Sales_Org__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sales Org</label>
    <type>Text</type>
</CustomField>