fullSandbox11072023/force-app/main/default/objects/Contact/fields/Account_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_Code__c</fullName>
    <formula>Account.SAP_Sold_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SAP Code</label>
    <type>Text</type>
</CustomField>