fullSandbox11072023/force-app/main/default/objects/Contact/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <description>Hidden field necessary for reporting and Contact uploads. Since SAP # is a formula and not an External ID</description>
    <formula>Account.Id</formula>
    <inlineHelpText>Hidden field necessary for reporting and Contact uploads. Since SAP # is a formula and not an External ID</inlineHelpText>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>