fullSandbox11072023/force-app/main/default/objects/Contact/fields/ANZ_Contact__c.field-meta.xml
<CustomField>
    <fullName>ANZ_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify Contacts migrated from AU Instance.</description>
    <inlineHelpText>Used to identify Contacts migrated from AU Instance.</inlineHelpText>
    <label>ANZ Contact</label>
    <type>Checkbox</type>
</CustomField>