fullSandbox11072023/force-app/main/default/objects/Contact/fields/Bed_Count__c.field-meta.xml
<CustomField>
    <fullName>Bed_Count__c</fullName>
    <description>The number of beds in the hospital.</description>
    <label>Dept. Bed Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>