fullSandbox11072023/force-app/main/default/objects/Contact/fields/Business_Unit1__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit1__c</fullName>
    <description>Choose the Business Unit that this contact belongs to</description>
    <inlineHelpText>Choose the Business Unit that this contact belongs to</inlineHelpText>
    <label>Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alternate Care</fullName>
            </value>
            <value>
                <fullName>Anesthesia</fullName>
            </value>
            <value>
                <fullName>Clinical Affairs</fullName>
            </value>
            <value>
                <fullName>Commercial Operations</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>EMS</fullName>
            </value>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Interventional Capital</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>LMA</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Respiratory</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Surgical Disposables</fullName>
            </value>
            <value>
                <fullName>Surgical Instruments</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>