fullSandbox11072023/force-app/main/default/objects/Contact/fields/Business_Unit_Count__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Count__c</fullName>
    <label>Business Unit Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>