fullSandbox11072023/force-app/main/default/objects/Contact/fields/Cardiac_Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Cardiac_Send_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box when you would like to send the Cardiac Service Customer Satisfaction Survey.</inlineHelpText>
    <label>Cardiac - Send Survey</label>
    <type>Checkbox</type>
</CustomField>