fullSandbox11072023/force-app/main/default/objects/Contact/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Add additional info about the contact</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>