fullSandbox11072023/force-app/main/default/objects/Contact/fields/Confidential_Information__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Information__c</fullName>
    <description>This is a restricted access field for management to enter in confidential information</description>
    <label>Confidential Information</label>
    <type>TextArea</type>
</CustomField>