fullSandbox11072023/force-app/main/default/objects/Contact/fields/Contact_s_Website__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Website__c</fullName>
    <label>Contact&apos;s Website</label>
    <type>Url</type>
</CustomField>