fullSandbox11072023/force-app/main/default/objects/Contact/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <description>Medical Credentials</description>
    <inlineHelpText>Medical Credentials</inlineHelpText>
    <label>Credentials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BSN</fullName>
            </value>
            <value>
                <fullName>CCEMT</fullName>
            </value>
            <value>
                <fullName>Certified Registered Nurse Anesthetists</fullName>
            </value>
            <value>
                <fullName>CRNA</fullName>
            </value>
            <value>
                <fullName>CRT</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>CT Tech</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>Doctor of Veterinary Medicine</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>EMT</fullName>
            </value>
            <value>
                <fullName>EMT-P</fullName>
            </value>
            <value>
                <fullName>FTO</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>Infection Control Personnel</fullName>
            </value>
            <value>
                <fullName>M.H.S. RRT</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MD, FACS</fullName>
            </value>
            <value>
                <fullName>Medical Doctor</fullName>
            </value>
            <value>
                <fullName>MHA</fullName>
            </value>
            <value>
                <fullName>MICT, ASN</fullName>
            </value>
            <value>
                <fullName>MPH</fullName>
            </value>
            <value>
                <fullName>MSN</fullName>
            </value>
            <value>
                <fullName>MSO</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>NREMT</fullName>
            </value>
            <value>
                <fullName>NREMT-P</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Other/None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>