fullSandbox11072023/force-app/main/default/objects/Contact/fields/Current_Position_Start__c.field-meta.xml
<CustomField>
    <fullName>Current_Position_Start__c</fullName>
    <label>Current Position Start</label>
    <type>Date</type>
</CustomField>