fullSandbox11072023/force-app/main/default/objects/Contact/fields/Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country__c</fullName>
    <formula>MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Country</label>
    <type>Text</type>
</CustomField>