fullSandbox11072023/force-app/main/default/objects/Contact/fields/Customer_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group_Number__c</fullName>
    <formula>Account.Account_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer_Group_Number</label>
    <type>Text</type>
</CustomField>