fullSandbox11072023/force-app/main/default/objects/Contact/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <description>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</description>
    <formula>IF(Data_Quality_Score__c = 4, &quot;All Contact Details Captured&quot;, 
&quot;Missing: &quot;&amp;
IF( LEN(FirstName) = 0, &quot;First Name, &quot;,NULL)&amp;&quot;&quot;&amp;
IF( LEN(Phone) = 0, &quot;Phone, &quot;,NULL)&amp;&quot;&quot;&amp;
IF(LEN( Email) = 0, &quot;Email&quot;,NULL)
)</formula>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>