fullSandbox11072023/force-app/main/default/objects/Contact/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <description>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</description>
    <formula>IF( LEN( Phone) = 0, 0,1) + 
IF( LEN( Email) = 0, 0,1) + 
IF( LEN(FirstName) = 0, 0,0.5) + 1.5</formula>
    <label>Data Quality Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>