fullSandbox11072023/force-app/main/default/objects/Contact/fields/Date_Time_Cardiac_Survey_Returned__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Cardiac_Survey_Returned__c</fullName>
    <description>Updates from Formstack when Survey is submitted.</description>
    <label>Date/Time Cardiac Survey Returned</label>
    <type>DateTime</type>
</CustomField>