fullSandbox11072023/force-app/main/default/objects/Contact/fields/Department_Custom__c.field-meta.xml
<CustomField>
    <fullName>Department_Custom__c</fullName>
    <label>Department Custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acute / Post Acute Care</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Aged Care</fullName>
            </value>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Anaesthesia &amp; Pain Medicine</fullName>
            </value>
            <value>
                <fullName>Anaesthetic &amp; Recovery</fullName>
            </value>
            <value>
                <fullName>Apherisis Unit</fullName>
            </value>
            <value>
                <fullName>Assessment &amp; Diagnostic Unit</fullName>
            </value>
            <value>
                <fullName>Bariatric Department</fullName>
            </value>
            <value>
                <fullName>Biomedical Engineering</fullName>
            </value>
            <value>
                <fullName>Birthing/Delivery Suite</fullName>
            </value>
            <value>
                <fullName>Burn Unit</fullName>
            </value>
            <value>
                <fullName>Cancer Care Centre</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardio Thoracic Intensive Care Nurse Unit</fullName>
            </value>
            <value>
                <fullName>Cardio Thoracic Surgery</fullName>
            </value>
            <value>
                <fullName>Cath Lab</fullName>
            </value>
            <value>
                <fullName>Central Sterile</fullName>
            </value>
            <value>
                <fullName>Childrens Ward</fullName>
            </value>
            <value>
                <fullName>Clinical Products</fullName>
            </value>
            <value>
                <fullName>Colorectal</fullName>
            </value>
            <value>
                <fullName>Community Health</fullName>
            </value>
            <value>
                <fullName>Community Services</fullName>
            </value>
            <value>
                <fullName>Coronary Angiography Unit</fullName>
            </value>
            <value>
                <fullName>Coronary Care Unit</fullName>
            </value>
            <value>
                <fullName>Corporate Office</fullName>
            </value>
            <value>
                <fullName>Critical Care Unit</fullName>
            </value>
            <value>
                <fullName>CSSD</fullName>
            </value>
            <value>
                <fullName>Day Oncology</fullName>
            </value>
            <value>
                <fullName>Day Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>