fullSandbox11072023/force-app/main/default/objects/Contact/fields/DocMatterQualifier__c.field-meta.xml
<CustomField>
    <fullName>DocMatterQualifier__c</fullName>
    <inlineHelpText>Expert User - Mastered TFX Fascial Closure Technology
Qualified Lead - Good target for Fascial Closure
KOL - Regional / National HCP Target</inlineHelpText>
    <label>DocMatter Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expert User</fullName>
            </value>
            <value>
                <fullName>Qualified Lead</fullName>
            </value>
            <value>
                <fullName>KOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>