fullSandbox11072023/force-app/main/default/objects/Contact/fields/Does_Not_Work_Here__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Work_Here__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the contact no longer works at the company or is aged with no activity in the last 3 years.</description>
    <inlineHelpText>Check this box if a contact no longer works at this customer or is aged with no activity in the last 3 years.. We recommend changing the account if they simply switch facilities.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>