fullSandbox11072023/force-app/main/default/objects/Contact/fields/Eloqua_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Business_Unit__c</fullName>
    <label>Eloqua Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>