fullSandbox11072023/force-app/main/default/objects/Contact/fields/Eloqua_Business_Unit_Reset__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Business_Unit_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This forces the trigger to recalc the Eloqua Business Unit field.</inlineHelpText>
    <label>Eloqua Business Unit Reset</label>
    <type>Checkbox</type>
</CustomField>