fullSandbox11072023/force-app/main/default/objects/Contact/fields/Eloqua_Sync__c.field-meta.xml
<CustomField>
    <fullName>Eloqua_Sync__c</fullName>
    <formula>AND
(
OR(
UPPER(Eloqua_Business_Unit__c) = &quot;RESPIRATORY&quot;,
UPPER(Eloqua_Business_Unit__c) = &quot;UROLOGY&quot;,
UPPER(Eloqua_Business_Unit__c) = &quot;ANESTHESIA&quot;,
UPPER(Eloqua_Business_Unit__c) = &quot;EMS&quot;,
UPPER(Eloqua_Business_Unit__c) = &quot;ALTERNATE CARE&quot;,
UPPER(Eloqua_Business_Unit__c) = &quot;SURGICAL DISPOSABLES&quot;,
UPPER(Eloqua_Business_Unit__c) = &quot;SURGICAL INSTRUMENTS&quot;
),
OR(MailingCountry=&quot;US&quot;,
MailingCountry =&quot;USA&quot;,
MailingCountry = &quot;United States of America&quot;,
MailingCountry = &quot;United States&quot;,
MailingCountry=&quot;us&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eloqua Sync</label>
    <type>Checkbox</type>
</CustomField>