fullSandbox11072023/force-app/main/default/objects/Contact/fields/EMEA_Department__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Department__c</fullName>
    <description>Department list for EMEA</description>
    <label>EMEA Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Bariatric Surgery</fullName>
            </value>
            <value>
                <fullName>Biomed</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiology Interventional</fullName>
            </value>
            <value>
                <fullName>Cardiology Surgery</fullName>
            </value>
            <value>
                <fullName>Central sterilization unit</fullName>
            </value>
            <value>
                <fullName>Central Warehouse</fullName>
            </value>
            <value>
                <fullName>Dialysis</fullName>
            </value>
            <value>
                <fullName>Digestive Surgery</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Emergency Department</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General Direction</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Geriatric</fullName>
            </value>
            <value>
                <fullName>Gynaecology</fullName>
            </value>
            <value>
                <fullName>Haematology</fullName>
            </value>
            <value>
                <fullName>Hygienists</fullName>
            </value>
            <value>
                <fullName>Intensive care unit (ICU)</fullName>
            </value>
            <value>
                <fullName>Logistic</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Nursing</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Operating theatre (OT)</fullName>
            </value>
            <value>
                <fullName>Orthopaedic Surgery</fullName>
            </value>
            <value>
                <fullName>Paramedic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>