fullSandbox11072023/force-app/main/default/objects/Contact/fields/EMEA_Position_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Position_Job_Title__c</fullName>
    <description>List of EMEA Job Titles</description>
    <label>EMEA Position/Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Bariatric Surgeon</fullName>
            </value>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>Clinical educator</fullName>
            </value>
            <value>
                <fullName>Colorectal Surgeon</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Deputy Surgeon</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Esophagogastric Surgeon</fullName>
            </value>
            <value>
                <fullName>Head &amp; Neck Surgeon</fullName>
            </value>
            <value>
                <fullName>Head Nurse</fullName>
            </value>
            <value>
                <fullName>Head of department</fullName>
            </value>
            <value>
                <fullName>Hepatobiliar Surgeon</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Medical Advisor</fullName>
            </value>
            <value>
                <fullName>MOH</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Pediatric Surgeon</fullName>
            </value>
            <value>
                <fullName>Perfusionist</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager GPO</fullName>
            </value>
            <value>
                <fullName>Resuscitation Lead</fullName>
            </value>
            <value>
                <fullName>Resuscitation Manager</fullName>
            </value>
            <value>
                <fullName>Resuscitation Officer</fullName>
            </value>
            <value>
                <fullName>Robotic Surgeon</fullName>
            </value>
            <value>
                <fullName>Scrub Nurse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>