fullSandbox11072023/force-app/main/default/objects/Contact/fields/Estimated_Loaded_Appliers__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Loaded_Appliers__c</fullName>
    <label>Estimated Loaded Appliers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-20</fullName>
            </value>
            <value>
                <fullName>20-50</fullName>
            </value>
            <value>
                <fullName>50-100</fullName>
            </value>
            <value>
                <fullName>100-250</fullName>
            </value>
            <value>
                <fullName>250+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>