fullSandbox11072023/force-app/main/default/objects/Contact/fields/Evaluation_Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Committee_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluation Committee Member</label>
    <type>Checkbox</type>
</CustomField>