fullSandbox11072023/force-app/main/default/objects/Contact/fields/FellowConcentration__c.field-meta.xml
<CustomField>
    <fullName>FellowConcentration__c</fullName>
    <label>Fellow Concentration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CHIP</fullName>
            </value>
            <value>
                <fullName>CV Surgeon</fullName>
            </value>
            <value>
                <fullName>Electrophysiology</fullName>
            </value>
            <value>
                <fullName>Interventional Cardiologist</fullName>
            </value>
            <value>
                <fullName>Interventional Radiologist</fullName>
            </value>
            <value>
                <fullName>Structural Heart</fullName>
            </value>
            <value>
                <fullName>Vascular Surgeon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>