fullSandbox11072023/force-app/main/default/objects/Contact/fields/Geocode_Location__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Location__c</fullName>
    <label>Geocode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>