fullSandbox11072023/force-app/main/default/objects/Contact/fields/GraduationDate__c.field-meta.xml
<CustomField>
    <fullName>GraduationDate__c</fullName>
    <description>For Interventional Fellowship Graduations</description>
    <inlineHelpText>For Interventional Fellowship Graduations</inlineHelpText>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>