fullSandbox11072023/force-app/main/default/objects/Contact/fields/Hospital_After_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Hospital_After_Graduation__c</fullName>
    <label>Hospital After Graduation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>