fullSandbox11072023/force-app/main/default/objects/Contact/fields/Influencer_Level__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Level__c</fullName>
    <label>Influencer Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Supporter</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>