fullSandbox11072023/force-app/main/default/objects/Contact/fields/Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Interested_In__c</fullName>
    <label>Interested In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Resident labs partnership with Teleflex</fullName>
            </value>
            <value>
                <fullName>Studies</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>