fullSandbox11072023/force-app/main/default/objects/Contact/fields/KDM__c.field-meta.xml
<CustomField>
    <fullName>KDM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Key Decision Maker</description>
    <label>KDM</label>
    <type>Checkbox</type>
</CustomField>