fullSandbox11072023/force-app/main/default/objects/Contact/fields/KOL__c.field-meta.xml
<CustomField>
    <fullName>KOL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Key Opinion Leader</description>
    <label>KOL</label>
    <type>Checkbox</type>
</CustomField>