fullSandbox11072023/force-app/main/default/objects/Contact/fields/LatAm_Brand_Preference__c.field-meta.xml
<CustomField>
    <fullName>LatAm_Brand_Preference__c</fullName>
    <description>This field is a description of the Brands the Contact and his/her associates prefer to use</description>
    <label>Brand Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>