fullSandbox11072023/force-app/main/default/objects/Contact/fields/LatAm_Notes__c.field-meta.xml
<CustomField>
    <fullName>LatAm_Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>