fullSandbox11072023/force-app/main/default/objects/Contact/fields/LatAm_Other__c.field-meta.xml
<CustomField>
    <fullName>LatAm_Other__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>