fullSandbox11072023/force-app/main/default/objects/Contact/fields/Level_of_Influence__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Influence__c</fullName>
    <label>Level of Influence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>